Tue Oct 12 21:36:00 2004  Joseph Heled  <joseph@gnubg.org>

	* eval.c (FindBestMoveInEval): Add usage of prunning nets. This is
	quite a large change, and since it adds a member to evalcontext,
	possibly a destructive one.

Sun Oct 10 23:04:14 GMT 2004 Jon Nall <backgame@gmail.com>

    * backgammon.h, gnubg.c, play.c: Added support for adding comments
    to moves from the command line. Closes bug #10638

Tue Oct 5 16:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* database.py, relational.c, gtkgame.c (and others) : Added
	check for match in database

Wed Sep 29 21:29:45 2004 Oystein Johansen <oystein@gnubg.org>
	
	* relational.c: make it compile without gtk

Wed Sep 29 18:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* database.py, relational.c, gtkgame.c: Added more relational
	database code

Wed Sep 29 15:10:45 2004  Oystein Johansen <oystein@gnubg.org>

	* makebearoff.c: Display 'usage' on Windows.

Sun Sep 19 14:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c: Fix gtk2 panel bug

Thu Sep 16 8:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* eval.c: Fix bug (navigate to last match crash) - hopefully

Fri Sep 10 10:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkboard.c, gtkgame.c, gnubg.c, gtkpanels.c: Added command and theory
	panels (test) and slider for panels.

Thu Sep 9 12:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkboard.c, render.*, gnubg.c: Small memory leaks, uninitialized
	memory reads and tidy up code added.  May fix import .mat bugs

Mon Sep 6 00:27:04 2004 GMT Jim Segrave <jes@jes-2.demon.nl>

	* show.c = fix for running off array end in show path command
	
Wed Sep 1 17:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c: Small import bug fixed

Wed Aug 25 18:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c, gtkgamelist.c, import.c, sgf.c: Speed up loading
	and remove flickering

Fri Aug 13 09:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
