@@ -1,3 +1,7 @@
+Tue Oct 12 19:44:00 2004  Oystein Johansen  <oystein@gnubg.org>
+
+	* gnubgmodule.c: Add methods for FindBestMove and EvaluateCubeful
+
 Tue Oct 12 21:36:00 2004  Joseph Heled  <joseph@gnubg.org>
 
 	* eval.c (FindBestMoveInEval): Add usage of prunning nets. This is
